# sudoku-display

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-pages.yml
docs/: testing-guidelines.md
docs/agent-context/: 20260222-00.md  20260222-01.md  20260222-02.md  20260222-03.md  20260222-04.md  20260222-05.md  README.md  TEMPLATE.md  app-css-maintainability-audit.md  app-hardcoded-values-audit.md  coverage-expansion-plan.md  layout-breakpoint-operation-audit.md  layout-breakpoint-sync-audit.md  solve-page-ui-audit.md
public/puzzles/: default.txt
rust/sudoku_generator/: Cargo.toml
rust/sudoku_generator/src/: lib.rs
src/: App.css  App.tsx  setupTests.ts
src/components/: InkActionFloatBar.tsx  InkOverlay.tsx  InkToggleBar.tsx  InkToolbar.tsx  PuzzleInput.tsx  SolveNumberPad.tsx  SudokuCell.tsx  SudokuGrid.tsx
src/constants/: difficulty.ts  ink.ts  layout.ts  messages.ts  routes.ts  storageKeys.ts  sudokuDomain.ts  uiTuning.ts  wasm.ts
src/lib/: attemptId.ts  defaultPuzzle.ts  elapsedTime.ts  gameStorage.ts  historyStorage.ts  inkModel.ts  inkStorage.ts  navigation.ts  solveA11y.ts  sudokuFormatter.ts  sudokuModel.ts  sudokuParser.ts  timerStorage.ts  useBoardFitSize.ts  useIsMobileViewport.ts  useKeyboardInset.ts  useKeyboardScrollLock.ts  useReviewScrollLock.ts  useShouldUseSolveNoScroll.ts  useSolveInputSheetViewport.ts
src/styles/: tokens.css  (+5 more)
tools/: lint-breakpoint-sync.mjs  lint-spacing-tokens.mjs  lint-typography-tokens.mjs  verify-wasm-externref-table.mjs  vite-breakpoint-token-plugin.ts
(+59 files in other folders)
