[package]
name = "sudoku_generator"
version = "0.1.0"
edition = "2021"
description = "Sudoku puzzle generator for WebAssembly"
license = "MIT"
repository = "https://github.com/shgnaka/sudoku-display"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3.77"
features = ["console"]
